fix(webcomponent): add "border-spacing: 0" style for table

--- a/packages/webcomponents/src/components/certificate-summary/certificate-summary.scss
+++ b/packages/webcomponents/src/components/certificate-summary/certificate-summary.scss
@@ -12,6 +12,8 @@ td {
 
 table {
   width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
 }
 
 td {
