--- a/packages/webcomponents/src/components/certificates-viewer/certificates-viewer.scss
+++ b/packages/webcomponents/src/components/certificates-viewer/certificates-viewer.scss
@@ -14,6 +14,7 @@ table {
   width: 100%;
   table-layout: fixed;
   border-collapse: collapse;
+  border-spacing: 0;
 }
 
 table thead {
